--- a/Petrol station/package.json
+++ b/Petrol station/package.json
@@ -12,11 +12,16 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "http-proxy-middleware": "^2.0.6",
     "immer": "^10.0.2",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.4",
+    "mapbox-gl-leaflet": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.13.0",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "^3.3.2",
     "use-immer": "^0.9.0"
   },
