--- a/Petrol station/package.json
+++ b/Petrol station/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "anychart-react": "^1.4.1",
     "axios": "^1.4.0",
+    "flowbite": "^1.6.6",
     "http-proxy-middleware": "^2.0.6",
     "immer": "^10.0.2",
     "jwt-decode": "^3.1.2",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.13.0",
     "react-spinners": "^0.13.8",
     "tailwindcss": "^3.3.2",
+    "tw-elements": "^1.0.0-beta2",
     "use-immer": "^0.9.0"
   },
   "devDependencies": {
