Update to super admin dashboard

--- a/Petrol station/package.json
+++ b/Petrol station/package.json
@@ -14,11 +14,13 @@
     "anychart-react": "^1.4.1",
     "axios": "^1.4.0",
     "flowbite": "^1.6.6",
+    "flowbite-react": "^0.4.10",
     "http-proxy-middleware": "^2.0.6",
     "immer": "^10.0.2",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
     "mapbox-gl-leaflet": "^0.0.16",
+    "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
