--- a/Petrol station/package.json
+++ b/Petrol station/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.10",
+    "fusioncharts": "^3.20.0",
     "http-proxy-middleware": "^2.0.6",
     "immer": "^10.0.2",
     "jwt-decode": "^3.1.2",
@@ -23,6 +24,7 @@
     "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fusioncharts": "^4.0.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.13.0",
     "react-spinners": "^0.13.8",
