--- a/Petrol station/package.json
+++ b/Petrol station/package.json
@@ -28,6 +28,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.13.0",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.2",
     "tw-elements": "^1.0.0-beta2",
     "use-immer": "^0.9.0"
